samples/_failures_safe/1761615068_b941d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35d4c316.c: In function ‘main’:
./samples/SAFE/__tmp_35d4c316.c:156:13: error: expected expression at end of input
  156 |             fprintf(stderr,
      |             ^~~~~~~
./samples/SAFE/__tmp_35d4c316.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_35d4c316.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_35d4c316.c:156:13: error: expected declaration or statement at end of input
